code/part2b/prin_c++/2b/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'myIP.c' ... 
WARNING: [HLS 200-40] In file included from myIP.c:1:
In file included from ./myLib.h:10:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed.h:54:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_common.h:57:
/run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_decl.h:93:2: error: "AP data type can only be used in C++"
#error "AP data type can only be used in C++"
 ^
In file included from myIP.c:1:
In file included from ./myLib.h:10:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed.h:55:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed_base.h:62:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_int.h:55:
/run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_int_base.h:62:2: error: "C++ is required to include this header file"
#error "C++ is required to include this header file"
 ^
In file included from myIP.c:1:
In file included from ./myLib.h:10:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed.h:55:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed_base.h:62:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_int.h:56:
/run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_int_ref.h:62:2: error: "C++ is required to include this header file"
#error "C++ is required to include this header file"
 ^
In file included from myIP.c:1:
In file included from ./myLib.h:10:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed.h:55:
/run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed_base.h:71:2: error: "C++ is required to include this header file"
#error "C++ is required to include this header file"
 ^
In file included from myIP.c:1:
In file included from ./myLib.h:10:
In file included from /run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed.h:56:
/run/media/epetrakos/60GB/Xilinx/Vivado/2019.1/common/technology/autopilot/ap_fixed_ref.h:62:2: error: "C++ is required to include this header file"
#error "C++ is required to include this header file"
 ^
5 errors generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
